--- a/app/src/main/res/layout/animal.xml
+++ b/app/src/main/res/layout/animal.xml
@@ -1,22 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:orientation="vertical"
+    >
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="18dp"
-        android:background="@color/colorPrimary">
+        android:padding="16dp">
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/specie"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginRight="16dp"
+            android:foregroundGravity="center_horizontal"
+            android:visibility="gone" />
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/action_button"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:gravity="right|center"
+                android:text="Buy Credit"
+                android:paddingLeft="@dimen/edit_text_top"
+                android:paddingRight="@dimen/edit_text_top"
+                android:textStyle="bold"
+                android:textSize="10sp"
+                />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_toLeftOf="@id/action_button">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Animal"
+                    android:textColor="@color/colorPrimary"
+                    android:id="@+id/title"
+                    />
+
+                <TextView
+                    android:layout_marginTop="@dimen/edit_text_top"
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical"
+                    android:maxLines="1"
+                    android:scrollHorizontally="true"
+                    android:text="480"
+                    android:textColor="@color/colorPrimary"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/specie"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="3"
+                    android:scrollHorizontally="true"
+                    android:text="This is the total number of people in "
+
+                    />
+
+
+            </LinearLayout>
+
+        </RelativeLayout>
 
     </LinearLayout>
+
+</LinearLayout>
 </layout>
