--- a/ogya/src/main/res/layout/component_quick_form_input.xml
+++ b/ogya/src/main/res/layout/component_quick_form_input.xml
@@ -9,18 +9,18 @@
         android:paddingRight="@dimen/ogya_default_margin"
         android:paddingTop="@dimen/ogya_default_margin">
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/input_layout">
 
-            <android.support.design.widget.TextInputEditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Hint" />
 
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <ImageButton
             android:id="@+id/button"
