--- a/ogya/src/main/res/layout/quick_dialog.xml
+++ b/ogya/src/main/res/layout/quick_dialog.xml
@@ -76,7 +76,7 @@
 
         </LinearLayout>
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/card_objects"
             android:layout_width="@dimen/inner_dialog_width"
             android:layout_height="180dp"
