the road to ogya forms

--- a/ogya/src/main/res/layout/component_quick_form_input.xml
+++ b/ogya/src/main/res/layout/component_quick_form_input.xml
@@ -16,6 +16,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/input"
+                android:tag="input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Hint" />
